edited chat html

--- a/assignment/src/app/chat/chat.component.html
+++ b/assignment/src/app/chat/chat.component.html
@@ -1,3 +1,9 @@
-<p>
-  chat works!
-</p>
+<form (submit)="sendMessage($event)">
+	<input [(ngModel)]="message" name="message"/>
+	<button>Send</button>
+</form>
+
+<div *ngFor="let message of messages">
+    {{message.text}}
+</div>
+
