--- a/assignment/src/app/users/users.component.html
+++ b/assignment/src/app/users/users.component.html
@@ -1,3 +1,31 @@
-<p>
-  users works!
-</p>
+<div id="createForm">
+	<h3>Create a User:</h3>
+
+	<form (submit)="createUser($event)">
+	  <div class="form-group row">
+	    <label>Username: </label>
+	    <input class="form-control" [(ngModel)]="username" type="text" name="username" placeholder="Enter Username" required />
+	  </div>
+	  <div class="form-group row">
+	    <label>Email address</label>
+	    <input class="form-control" [(ngModel)]="email" type="text" name="email" placeholder="Enter Email" required />
+	  </div>
+	  <div class="form-group row">
+	  	<label class="form-check-label">Account Type:</label>
+	    <select class="form-control" [(ngModel)]="user_type" name="user_type">
+			<option value="basic">Basic User</option>
+			<option value="group">Group Admin</option>
+			<option value="super">Super Admin</option>			
+		</select>
+	    
+	  </div>
+	  <button>Create User</button>
+	</form>
+
+</div>
+
+<div>
+	<div id="users" class="row">
+		
+	</div>
+</div>
